// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Boring Flow nodes removal should remove node node0: Remove node0 1`] = `
Object {
  "node1": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "node2",
          "name": "Red",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Green",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Other",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": "uuid_node1_exit0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "exit_uuid": "uuid_node1_exit1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@input",
        "result_name": "color",
        "type": "switch",
      },
      "uuid": "node1",
      "wait": Object {
        "type": "msg",
      },
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 230,
      },
      "type": "wait_for_response",
    },
  },
  "node2": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Participants",
              "uuid": "group_0",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node2_action1",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node3",
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node2_exit0": "node2",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Boring Flow nodes removal should remove node node1: Remove node1 1`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node2": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Participants",
              "uuid": "group_0",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node2_action1",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node3",
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node2_exit0": "node2",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Boring Flow nodes removal should remove node node2: Remove node2 1`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node1",
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node1": Object {
    "inboundConnections": Object {
      "node0_exit0": "node0",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "node3",
          "name": "Red",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_node_uuid": "node3",
          "name": "Green",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_node_uuid": "node3",
          "name": "Other",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": "uuid_node1_exit0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "exit_uuid": "uuid_node1_exit1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@input",
        "result_name": "color",
        "type": "switch",
      },
      "uuid": "node1",
      "wait": Object {
        "type": "msg",
      },
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 230,
      },
      "type": "wait_for_response",
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Boring Flow nodes removal should remove node node3: Remove node3 1`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node1",
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node1": Object {
    "inboundConnections": Object {
      "node0_exit0": "node0",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "node2",
          "name": "Red",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Green",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Other",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": "uuid_node1_exit0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "exit_uuid": "uuid_node1_exit1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@input",
        "result_name": "color",
        "type": "switch",
      },
      "uuid": "node1",
      "wait": Object {
        "type": "msg",
      },
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 230,
      },
      "type": "wait_for_response",
    },
  },
  "node2": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Participants",
              "uuid": "group_0",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node2_action1",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
}
`;

exports[`Color Flow should initalize definition 1`] = `
Object {
  "059a8daa-0697-44a6-9486-2386cc417e9d": Object {
    "inboundConnections": Object {
      "6f78b6f2-e8a4-4fa0-9277-3e60d9bf2dbf": "e2ecc8de-9774-4b74-a0dc-ca8aea123227",
      "7571ef74-35b3-4090-ac7a-c4531a500806": "882f8022-7256-4b1c-abf3-7b180f5e7e24",
    },
    "node": Object {
      "actions": Array [
        Object {
          "flow_name": "Customer Service",
          "flow_uuid": "9ecc8e84-6b83-442b-a04a-8094d5de997b",
          "type": "start_flow",
          "uuid": "dbcccd07-9966-460a-9fcd-4db5a2f921ab",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": "Complete",
          "uuid": "8c867b8f-f311-4b02-b36b-3688964bdc69",
        },
        Object {
          "destination_node_uuid": null,
          "name": "Expired",
          "uuid": "1a81edc4-5f8c-4115-92ef-834dac61c2e7",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "C",
            ],
            "exit_uuid": "8c867b8f-f311-4b02-b36b-3688964bdc69",
            "type": "has_run_status",
            "uuid": "2d247ecc-1d5d-4381-914a-3195b1888f04",
          },
          Object {
            "arguments": Array [
              "E",
            ],
            "exit_uuid": "1a81edc4-5f8c-4115-92ef-834dac61c2e7",
            "type": "has_run_status",
            "uuid": "b46ffd80-1b85-44bf-b3f2-01550d4ff302",
          },
        ],
        "default_exit_uuid": null,
        "operand": "@child",
        "type": "switch",
      },
      "uuid": "059a8daa-0697-44a6-9486-2386cc417e9d",
      "wait": Object {
        "flow_uuid": "9ecc8e84-6b83-442b-a04a-8094d5de997b",
        "type": "flow",
      },
    },
    "ui": Object {
      "position": Object {
        "left": 300,
        "top": 520,
      },
      "type": "subflow",
    },
  },
  "46e8d603-8e5d-4435-97dd-1333291aafca": Object {
    "inboundConnections": Object {
      "445fc64c-2a18-47cc-89d0-15172826bfcc": "4fac7935-d13b-4b36-bf15-98075dca822a",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "bc978e00-2f3d-41f2-87c1-26b3f14e5925",
          "name": "Red",
          "uuid": "55855afc-f612-4ef9-9288-dcb1dd136052",
        },
        Object {
          "destination_node_uuid": "bc978e00-2f3d-41f2-87c1-26b3f14e5925",
          "name": "Orange",
          "uuid": "668ca2ab-8d49-47f5-82a1-e3a82a58e5fb",
        },
        Object {
          "destination_node_uuid": "bc978e00-2f3d-41f2-87c1-26b3f14e5925",
          "name": "Yellow",
          "uuid": "14806949-d583-49e2-aa55-03aa16ee5a3a",
        },
        Object {
          "destination_node_uuid": "bc978e00-2f3d-41f2-87c1-26b3f14e5925",
          "name": "Green",
          "uuid": "77394377-f6b8-4366-9bef-d468621258ef",
        },
        Object {
          "destination_node_uuid": "bc978e00-2f3d-41f2-87c1-26b3f14e5925",
          "name": "Blue",
          "uuid": "92d429d8-c275-4306-9360-93f4b9c7acb1",
        },
        Object {
          "destination_node_uuid": "bc978e00-2f3d-41f2-87c1-26b3f14e5925",
          "name": "Indigo",
          "uuid": "2de9af80-1bd9-4f37-839f-073edbd14369",
        },
        Object {
          "destination_node_uuid": "bc978e00-2f3d-41f2-87c1-26b3f14e5925",
          "name": "Violet",
          "uuid": "5760ec2f-04d4-492b-817b-9f395633ec79",
        },
        Object {
          "destination_node_uuid": "4fac7935-d13b-4b36-bf15-98075dca822a",
          "name": "Other",
          "uuid": "326a41b7-9bce-453b-8783-1113f649663c",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red, r",
            ],
            "exit_uuid": "55855afc-f612-4ef9-9288-dcb1dd136052",
            "type": "has_any_word",
            "uuid": "fa0a9b24-5f19-4b8e-b287-27af5811de1d",
          },
          Object {
            "arguments": Array [
              "orange, o",
            ],
            "exit_uuid": "668ca2ab-8d49-47f5-82a1-e3a82a58e5fb",
            "type": "has_any_word",
            "uuid": "b5f900b9-ad13-479a-8ad3-1f1ad5ac88f2",
          },
          Object {
            "arguments": Array [
              "yellow, y",
            ],
            "exit_uuid": "14806949-d583-49e2-aa55-03aa16ee5a3a",
            "type": "has_any_word",
            "uuid": "e9c842e8-f1c5-4f07-97e7-50a4f93b22e5",
          },
          Object {
            "arguments": Array [
              "green, g",
            ],
            "exit_uuid": "77394377-f6b8-4366-9bef-d468621258ef",
            "type": "has_any_word",
            "uuid": "cc5894af-5dce-454e-a525-3d7c5c41d21d",
          },
          Object {
            "arguments": Array [
              "blue, b",
            ],
            "exit_uuid": "92d429d8-c275-4306-9360-93f4b9c7acb1",
            "type": "has_any_word",
            "uuid": "590d13e3-7b47-44e3-b8a0-ba9bd41d75d2",
          },
          Object {
            "arguments": Array [
              "indigo, i",
            ],
            "exit_uuid": "2de9af80-1bd9-4f37-839f-073edbd14369",
            "type": "has_any_word",
            "uuid": "2a7cbed1-6597-4545-b145-14a2e9282e6c",
          },
          Object {
            "arguments": Array [
              "violet, v",
            ],
            "exit_uuid": "5760ec2f-04d4-492b-817b-9f395633ec79",
            "type": "has_any_word",
            "uuid": "ab99e18c-433f-436e-9278-08bcf506f433",
          },
        ],
        "default_exit_uuid": "326a41b7-9bce-453b-8783-1113f649663c",
        "operand": "@input",
        "result_name": "color",
        "type": "switch",
      },
      "uuid": "46e8d603-8e5d-4435-97dd-1333291aafca",
      "wait": Object {
        "type": "msg",
      },
    },
    "ui": Object {
      "position": Object {
        "left": 300,
        "top": 120,
      },
      "type": "wait_for_response",
    },
  },
  "4fac7935-d13b-4b36-bf15-98075dca822a": Object {
    "inboundConnections": Object {
      "326a41b7-9bce-453b-8783-1113f649663c": "46e8d603-8e5d-4435-97dd-1333291aafca",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "What's your favorite color, (r)ed, (o)range, (y)ellow, (g)reen, (b)lue, (i)ndigo or (v)iolet?",
          "type": "send_msg",
          "uuid": "64378fc1-19e4-4c8a-be27-aee49ebc728a",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "46e8d603-8e5d-4435-97dd-1333291aafca",
          "name": null,
          "uuid": "445fc64c-2a18-47cc-89d0-15172826bfcc",
        },
      ],
      "uuid": "4fac7935-d13b-4b36-bf15-98075dca822a",
    },
    "ui": Object {
      "position": Object {
        "left": 0,
        "top": 0,
      },
    },
  },
  "533b64e2-5906-4d33-a8e9-64f1cb6c20dd": Object {
    "inboundConnections": Object {
      "a8bdc1c5-0283-4656-b932-4f4094f4cc7e": "bc978e00-2f3d-41f2-87c1-26b3f14e5925",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Yuck",
          "type": "send_msg",
          "uuid": "28b9e295-1102-4f13-bd9d-4a7b11f4fcdc",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "882f8022-7256-4b1c-abf3-7b180f5e7e24",
          "name": null,
          "uuid": "9de30522-db84-4471-bce6-99f6d0a200e0",
        },
      ],
      "uuid": "533b64e2-5906-4d33-a8e9-64f1cb6c20dd",
    },
    "ui": Object {
      "position": Object {
        "left": 680,
        "top": 340,
      },
    },
  },
  "882f8022-7256-4b1c-abf3-7b180f5e7e24": Object {
    "inboundConnections": Object {
      "9de30522-db84-4471-bce6-99f6d0a200e0": "533b64e2-5906-4d33-a8e9-64f1cb6c20dd",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": "Early Adopters",
          "uuid": "ae0b5c58-222f-4722-9fd4-faf32dec5f2b",
        },
        Object {
          "destination_node_uuid": "059a8daa-0697-44a6-9486-2386cc417e9d",
          "name": "Subscribers",
          "uuid": "7571ef74-35b3-4090-ac7a-c4531a500806",
        },
        Object {
          "destination_node_uuid": null,
          "name": "Other",
          "uuid": "0dcd0320-2a3b-4c41-97b3-45e147682cfa",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "cdbf9e01-aaa7-4381-8259-ee042447bcac",
            ],
            "exit_uuid": "ae0b5c58-222f-4722-9fd4-faf32dec5f2b",
            "type": "has_group",
            "uuid": "a2e446bf-7181-40f9-8996-5d2453486218",
          },
          Object {
            "arguments": Array [
              "33b28bac-b588-43e4-90de-fda77aeaf7c0",
            ],
            "exit_uuid": "7571ef74-35b3-4090-ac7a-c4531a500806",
            "type": "has_group",
            "uuid": "fa8d0d3a-067e-4460-9cff-0474ecc4e8ca",
          },
        ],
        "default_exit_uuid": "0dcd0320-2a3b-4c41-97b3-45e147682cfa",
        "operand": "@contact.groups",
        "type": "switch",
      },
      "uuid": "882f8022-7256-4b1c-abf3-7b180f5e7e24",
      "wait": Object {
        "type": "group",
      },
    },
    "ui": Object {
      "position": Object {
        "left": 640,
        "top": 460,
      },
      "type": "split_by_groups",
    },
  },
  "bc978e00-2f3d-41f2-87c1-26b3f14e5925": Object {
    "inboundConnections": Object {
      "14806949-d583-49e2-aa55-03aa16ee5a3a": "46e8d603-8e5d-4435-97dd-1333291aafca",
      "2de9af80-1bd9-4f37-839f-073edbd14369": "46e8d603-8e5d-4435-97dd-1333291aafca",
      "55855afc-f612-4ef9-9288-dcb1dd136052": "46e8d603-8e5d-4435-97dd-1333291aafca",
      "5760ec2f-04d4-492b-817b-9f395633ec79": "46e8d603-8e5d-4435-97dd-1333291aafca",
      "668ca2ab-8d49-47f5-82a1-e3a82a58e5fb": "46e8d603-8e5d-4435-97dd-1333291aafca",
      "77394377-f6b8-4366-9bef-d468621258ef": "46e8d603-8e5d-4435-97dd-1333291aafca",
      "92d429d8-c275-4306-9360-93f4b9c7acb1": "46e8d603-8e5d-4435-97dd-1333291aafca",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "e2ecc8de-9774-4b74-a0dc-ca8aea123227",
          "name": "Red",
          "uuid": "7b245d49-e9e3-4387-b4ad-48deb03528cd",
        },
        Object {
          "destination_node_uuid": "533b64e2-5906-4d33-a8e9-64f1cb6c20dd",
          "name": "Other",
          "uuid": "a8bdc1c5-0283-4656-b932-4f4094f4cc7e",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red, r",
            ],
            "exit_uuid": "7b245d49-e9e3-4387-b4ad-48deb03528cd",
            "type": "has_any_word",
            "uuid": "87173eee-5270-4233-aede-ca88e14b672a",
          },
        ],
        "default_exit_uuid": "a8bdc1c5-0283-4656-b932-4f4094f4cc7e",
        "operand": "@run.results.color ",
        "type": "switch",
      },
      "uuid": "bc978e00-2f3d-41f2-87c1-26b3f14e5925",
      "wait": Object {
        "type": "exp",
      },
    },
    "ui": Object {
      "position": Object {
        "left": 440,
        "top": 240,
      },
      "type": "split_by_expression",
    },
  },
  "e2ecc8de-9774-4b74-a0dc-ca8aea123227": Object {
    "inboundConnections": Object {
      "7b245d49-e9e3-4387-b4ad-48deb03528cd": "bc978e00-2f3d-41f2-87c1-26b3f14e5925",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Mine too!",
          "type": "send_msg",
          "uuid": "cd19e588-3383-4d54-b5df-8dbbc2b0d297",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "059a8daa-0697-44a6-9486-2386cc417e9d",
          "name": null,
          "uuid": "6f78b6f2-e8a4-4fa0-9277-3e60d9bf2dbf",
        },
      ],
      "uuid": "e2ecc8de-9774-4b74-a0dc-ca8aea123227",
    },
    "ui": Object {
      "position": Object {
        "left": 200,
        "top": 340,
      },
    },
  },
}
`;
